# aev

./: .gitignore  .gitmodules
asm_test/: CMakeLists.txt
asm_test/src/: asm_const.h  asm_functions.S  asm_functions.h  asm_mod_array.s  test_asm.c
cpp_stuff/: CMakeLists.txt  apr_stream.cpp
cpp_stuff/src/: dynlib.hpp  dynlib_unix.cpp  main.cpp
go_stuff/: add.go  client.go  newmath_test.go  server.go  split.go  str_swap.go  tut2.go  variables.go
go_stuff/newmath/: sqrt.go
logging_stuff/: A3.log.1  Makefile  log4cpp.properties  properties.cpp  simple.cpp
pdf/: books.xml  bookstore.xsl  cdcatalog.xml  result.html  test.py  test.xhtml
python_stuff/: random_test.py  return_test.py  roman.py  romantest.py
ruby_stuff/: add_files_to_keyval.rb  archiver.rb  compress_kyotocabinet_def.rb  compress_kyotocabinet_deflate.rb  compress_kyotocabinet_lzma.rb  compress_kyotocabinet_lzo.rb  compress_kyotocabinet_zlib.rb  compress_tcdb_content.rb  const_get.rb  decompress_kyotocabinet_def.rb  dir_rm.rb  extract_invoices.rb  extract_tcdb.rb  ft_ex.rb  get_files_from_keyval.rb  param_check.rb  sqlite_test.rb  test_uncompress.rb  zip_test.rb
ruby_stuff/hola/: hola.gemspec
ruby_stuff/hola/lib/: hola.rb
ruby_stuff/hola/lib/hola/: translator.rb
ruby_stuff/keyval_store/lib/: keyval.rb  tcdb_reader.rb
shatest/: CMakeLists.txt  args.py
shatest/data/: Hello.sha1  Hello.sha2  Hello.txt  Makefile
shatest/src/: longopts.cpp  sha1_checksum.cpp  shatest.cpp  shortopts.cpp  spammodule.cpp
yajltest/: Makefile  json_reformat.cpp  test.json
